/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements. See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership. The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations
 * under the License.
 *
 */

syntax = "proto3";

package com.smiles;
option java_multiple_files = true;

message CalcInfo{
  //QcSchema-Properties_Info
  string id = 8;
  int64 nbasis = 1; //	The number of basis functions for the computation. 	number
  int64 nmo = 2; //	The number of molecular orbitals for the computation. 	number
  int64 nalpha = 3;//	The number of alpha electrons in the computation. 	number
  int64 nbeta = 4;//	The number of beta electrons in the computation. 	number
  int64 natom = 5; //	The number of atoms in the computation. 	number
  double energy = 6;// 	The energy of the requested method, identical to return_value for energy computations. number
  string SMILES = 7;
}

message CalcInfoRequest {
  string calcInfoQuery=1;
  CalcInfo calcInfo = 2;
}


service CalcInfoService {
  rpc GetCalcInfo(CalcInfoRequest) returns (CalcInfo) {}
  rpc CreateCalcInfo(CalcInfoRequest) returns (CalcInfo){}
  rpc UpdateCalcInfo(CalcInfoRequest) returns (CalcInfo){}
  rpc DeleteCalcInfo(CalcInfoRequest) returns (CalcInfo){}
}
